--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gerardm111.github.io/mahaut-gerard/",
+  "homepage": "https://mahaut-gerard.letsmakefair.com",
   "dependencies": {
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
